[gd_scene load_steps=7 format=3 uid="uid://bkvff80w0ox7t"]

[ext_resource type="Script" uid="uid://bm6s1cw2caiqw" path="res://Scripts/history_box.gd" id="1_mc1de"]
[ext_resource type="Theme" uid="uid://b5dig8unv68n1" path="res://Themes/medium_fonts.tres" id="2_4egx4"]
[ext_resource type="Theme" uid="uid://tr3t3x8wkljk" path="res://Themes/history_box_view_button.tres" id="2_mc1de"]
[ext_resource type="Theme" uid="uid://cdsvsbygc0eyt" path="res://Themes/small_fonts.tres" id="3_4egx4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbx7d"]
bg_color = Color(5.41471e-08, 0.155382, 0.145387, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(4.36185e-08, 0.128984, 0.052465, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 20

[sub_resource type="Theme" id="Theme_4egx4"]

[node name="History_Box" type="Control"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 150.0
mouse_filter = 1
script = ExtResource("1_mc1de")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -75.0
offset_right = 250.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_mbx7d")

[node name="View_Btn" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -32.0
offset_right = -26.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_mc1de")
text = "->"

[node name="Date_Time" type="RichTextLabel" parent="Background"]
layout_mode = 2
offset_left = 25.0
offset_top = 23.0
offset_right = 375.0
offset_bottom = 70.0
mouse_filter = 1
theme = ExtResource("2_4egx4")
text = "2006-07-06 (23:30)"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = 10.0
offset_right = 375.0
offset_bottom = 60.0
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="His_Vals" type="HBoxContainer" parent="Background/ScrollContainer"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
theme = SubResource("Theme_4egx4")
theme_override_constants/separation = 4

[node name="Amount" type="RichTextLabel" parent="Background/ScrollContainer/His_Vals"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_4egx4")
theme_override_font_sizes/normal_font_size = 25
text = "99999999.9"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator_1" type="RichTextLabel" parent="Background/ScrollContainer/His_Vals"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_4egx4")
theme_override_font_sizes/normal_font_size = 30
text = "|"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Percent_Vals" type="RichTextLabel" parent="Background/ScrollContainer/His_Vals"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_4egx4")
theme_override_font_sizes/normal_font_size = 25
text = "99.5%"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator_2" type="RichTextLabel" parent="Background/ScrollContainer/His_Vals"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_4egx4")
theme_override_font_sizes/normal_font_size = 30
text = "|"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Year_Vals" type="RichTextLabel" parent="Background/ScrollContainer/His_Vals"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_4egx4")
theme_override_font_sizes/normal_font_size = 25
text = "99.9"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator_3" type="RichTextLabel" parent="Background/ScrollContainer/His_Vals"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_4egx4")
theme_override_font_sizes/normal_font_size = 30
text = "|"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Btn_State" type="RichTextLabel" parent="Background/ScrollContainer/His_Vals"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_4egx4")
theme_override_font_sizes/normal_font_size = 25
text = "F"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Background/View_Btn" to="." method="_on_view_btn_pressed"]
